...
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOpciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="40dp"
        android:paddingHorizontal="4dp"
...
